package cat.udl.eps.softarch.mypadel.domain;

public class PrivateMatch extends Match {
}
