@startuml

skinparam dpi 200
skinparam classAttributeFontSize 8
skinparam classArrowFontSize 9
skinparam classFontSize 10
skinparam nodesep 90
skinparam ranksep 40
hide stereotype
skinparam class {
	BackgroundColor White
	BackgroundColor<<Match>> LightPink
	BackgroundColor<<MatchResult>> #B4A7E5
	BackgroundColor<<User>> LightBlue
	BackgroundColor<<Court>> LightGreen
	BackgroundColor<<Reservation>> LightYellow
}

class User <<User>> {
    String username
    String email, password
}
User "1 createdBy" -- "many matches" Match



class Admin <<User>> extends User {
}

class Player <<User>> extends User {
    Integer score
    Enum level
}

class Match <<Match>> {
    Datetime startDate
    Duration duration
    Enum courtType
    Datetime cancelationDeadline
}

class PublicMatch <<Match>> extends Match {
    Enum level
}

class PrivateMatch <<Match>> extends Match {
}

class CustomMatch <<Match>> extends Match {
}

class MatchJoin <<Match>> {
    Datetime eventDate
}
MatchJoin "many joins" -- "1 joinedUser" Player
MatchJoin "1..4 playerJoins" -- "1 toMatch" Match

class MatchInvitation <<Match>> {
    Datetime eventDate
    String message
}
MatchInvitation "many creator" -- "1 createdBy" User
MatchInvitation "many invitations" -- "1 invites" Player
MatchInvitation "many invitations" -- "1 invitesTo" Match

class MatchResult <<MatchResult>> {
    List<Player> winningPair
    List<Player> loosingPair
    Boolean isDraw;
}
MatchResult "many submits" -- "1 submittedBy" Player
MatchResult "0..1 result" -- "1 for" Match

class MatchResultVerification <<MatchResult>> {
    Boolean agrees
}
MatchResultVerification "many verifies" -- "1 verifiedBy" Player
MatchResultVerification "1..4 verifications" -- "1 verifies" MatchResult

class Reservation <<Reservation>> {
    Datetime startDate
    Duration duration
    Enum courtType
}
Reservation "0..1 reserves" -- "1 toPlay" Match
Reservation "many directReservations" -- "1 submittedBy" User

class Court <<Court>> {
    Boolean isIndoor
    Boolean available
}
Court "1 for" -- "many reservations" Reservation

class MatchJoinRequest <<Match>> {
	Datetime eventDate
	String message
}

MatchJoinRequest "many requests" -- "1 requester" Player
MatchJoinRequest "many requesters" -- "1 toJoin" CustomMatch

@enduml
